--- a/.gitignore
+++ b/.gitignore
@@ -1,29 +1,16 @@
-# Logs
-logs
+.env
+node_modules/
+dist/
+dist-electron/
+dist-ssr/
+release/
+.idea
+.DS_Store
+.vscode/.debug.env
+logs/
 *.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
-
-node_modules
-dist
-dist-ssr
-*.local
-
-# Editor directories and files
-.idea
-.DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
-
-release/
-.vscode/.debug.env
-package-lock.json
-pnpm-lock.yaml
-yarn.lock
-dist-electron
